--- a/Viaxar/app/src/main/res/values/strings.xml
+++ b/Viaxar/app/src/main/res/values/strings.xml
@@ -5,4 +5,10 @@
     <string name="nav_header_title">Android Studio</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
+    <string-array name="coins">
+        <item>US Dollar</item>
+        <item>Real</item>
+        <item>Librah</item>
+        <item>Euro</item>
+    </string-array>
 </resources>
